Correct lecture of date and time, and add fields in AJAX data to start building the weather database

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -82,7 +82,7 @@
         </section>
     </div>
     <div class="container">
-        <div id="example_example" class="row"><p>{{ wind_speed_data }}</p>
+        <div id="weather_extra_div" class="row"><p>{{ wind_speed_data }}</p>
             <div id="weather-extra-info" class="col-12">
                 <table>
                     {% for speed in wind_speed %}
