Add query examples in app_weather views.py, and add credits and bug information for migration solutions given by CI

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -109,6 +109,8 @@
                         <tr>
                             <td>{{ other.pressure }}</td>
                             <td>{{ other.humidity }}</td>
+                            <td>{{ other.sunrise }}</td>
+                            <td>{{ other.sunset }}</td>
                         </tr>
                     {% endfor %}
                 </table>
