--- a/templates/weather.html
+++ b/templates/weather.html
@@ -82,8 +82,26 @@
         </section>
     </div>
     <div class="container">
-        <div id="weather_extra_info" class="row"><p>{{ wind_speed_data }}</p>
-            <div id="wind-extra-info" class="col-12 col-lg-4">
+        <div id="weather_extra_info" class="row">
+            <div id="chart-left" class="col-12 order-1 col-lg-4 order-lg-1">
+                <!-- Google Charts
+                Line Charts
+                Copied and modified from https://developers.google.com/chart/interactive/docs/gallery/linechart on January 5th, 2022, at 20:40. -->                
+                <div id="curve_chart_left" style="width: 100%; height: 100px"></div>
+            </div>
+            <div id="chart-middle" class="col-12 order-3 col-lg-4 order-lg-2">
+                <!-- Google Charts
+                Line Charts
+                Copied and modified from https://developers.google.com/chart/interactive/docs/gallery/linechart on January 5th, 2022, at 20:40. -->                
+                <div id="curve_chart_middle" style="width: 100%; height: 100px"></div>
+            </div>
+            <div id="chart-right" class="col-12 order-5 col-lg-4 order-lg-3">
+                <!-- Google Charts
+                Line Charts
+                Copied and modified from https://developers.google.com/chart/interactive/docs/gallery/linechart on January 5th, 2022, at 20:40. -->                
+                <div id="curve_chart_right" style="width: 100%; height: 100px"></div>
+            </div>
+            <div id="wind-extra-info" class="col-12 order-2 col-lg-4 order-lg-4">                
                 <table>
                     {% for item in wind_data %}
                         <tr>
@@ -93,7 +111,8 @@
                     {% endfor %}
                 </table>
             </div>
-            <div id="temperature-extra-info" class="col-12 col-lg-4">
+            
+            <div id="temperature-extra-info" class="col-12 order-4 col-lg-4 order-lg-5">
                 <table>
                     {% for temp in temperature_data %}
                         <tr>
@@ -103,7 +122,8 @@
                     {% endfor %}
                 </table>
             </div>
-            <div id="other-weather-extra-info" class="col-12 col-lg-4">
+            
+            <div id="other-weather-extra-info" class="col-12 order-6 col-lg-4 order-lg-6">
                 <table>
                     {% for other in other_weather_data %}
                         <tr>
@@ -122,6 +142,12 @@
 {% endblock %}
 
 {% block scripts %}
+<!-- Google Charts
+Line Charts
+Copied and modified from https://developers.google.com/chart/interactive/docs/gallery/linechart on January 5th, 2022, at 20:40. --> 
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript"></script>
+<!-- This page javascript file --> 
 <script src="/static/js/weather.js"></script>
 {% endblock %}
 
