--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,14 +292,21 @@ a.nav-link {
 }
 
 #temperature-extra-info {
-    background-color: rgb(64, 95, 180);
+    background-color: rgb(156, 224, 241);
     /*height: 250px;*/
 }
 
 #other-weather-extra-info {
-    background-color: rgb(7, 40, 129);
+    background-color: rgb(209, 236, 193);
     /*height: 250px;*/
 }
+
+
+#curve_chart_left, #curve_chart_middle, #curve_chart_right {
+    width: 100%;
+    height: 250px;
+}
+
 
 
 
