Add weather data to Google Chart graphs

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -137,7 +137,7 @@
                             <td>{{ other.other_rec.date }}</td>
                             <td style="display:none;">{{ other.other_rec.time }}</td>
                             <td>{{ other.pressure }}</td>
-                            <td>{{ other.main }}</td>
+                            <td>{{ other.humidity }}</td>
                         </tr>
                     {% endfor %}
                 </table>
