--- a/templates/weather.html
+++ b/templates/weather.html
@@ -82,6 +82,34 @@
         </section>
     </div>
     <div class="container">
+        <div id="select_data_options" class="row">            
+            <div id="s-d-o-1" class="col-12 col-lg-2">
+                <input type="radio" id="5-days" name="records-to-display" value="5-last" checked>
+                <label for="5-days">Last 5 days</label>
+            </div>
+            <div id="s-d-o-2" class="col-12 col-lg-2">
+                <input type="radio" id="15-days" name="records-to-display" value="15-last">
+                <label for="15-days">Last 15 days</label>
+            </div>
+            <div id="s-d-o-3" class="col-12 col-lg-5">
+                <input type="radio" id="all-data" name="records-to-display" value="all-data">
+                <label for="5-days">All data in table, last 30 days in chart</label>
+            </div>
+            <div id="s-d-o-4" class="col-12 col-lg-3">                    
+                <label for="s-d-o-list">Value</label>                  
+                <select id="s-d-o-list" name="other-value-list" class="input-field">
+                    <option value="temperature-max">Max Temperature</option>
+                    <option value="temperature-max">Min Temperature</option>
+                    <option value="pressure">Pressure</option>
+                    <option value="humidity">Humidity</option>
+                    <option value="visibility">Visibility</option>
+                    <option value="sky">Sky</option>
+                    <option value="description">Main</option>
+                    <option value="sunrise">Sunrise</option>
+                    <option value="sunset">Sunset</option>
+                </select>                                        
+            </div>            
+        </div>
         <div id="weather_extra_info" class="row">
             <div id="chart-left" class="col-12 order-1 col-lg-4 order-lg-1">
                 <!-- Google Charts
@@ -102,10 +130,8 @@
                 <div id="curve_chart_right"></div>
             </div>
             <div id="wind-extra-info" class="col-12 order-2 col-lg-4 order-lg-4">                
-                <table>
-                    
-                    {{ data_and_time.DataAndTimeForData.wind_data }}
-                    
+                <table id="wind-table">
+                                                           
                     {% for item in wind_data %}
                         <tr>
                             <td>{{ item.wind_rec_id.date }}</td>
