Finish queries for weather data and add prevention to send data before getting them from OpenWeather

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -37,7 +37,7 @@
                     <!-- Weather Data -->
                     
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Wind Speed</p></div>                                       
-                    <div id="value-wind" class="col-12 col-sm-6 col-md-3"><p>(wind speed)</p></div>
+                    <div id="value-wind" class="col-12 col-sm-6 col-md-3"><p>wind</p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Direction</p></div>
                     <div id="value-wind-direction" class="col-12 col-sm-6 col-md-3"><p>(direction)</div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temperature</p></div>
