Add option to manually enter coordinates for location in app_weather

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -14,9 +14,9 @@
                 <div class="row">
                     <div id="weather-data-title" class="col-12"><p>Coordinates for Weather Data</p></div>
                     <div id="latitute-title" class="col-12 col-sm-6 col-md-3"><p>Latitude</p></div>
-                    <div id="latitude" class="col-12 col-sm-6 col-md-3">90</div>
+                    <div id="latitude" class="col-12 col-sm-6 col-md-3"></div>
                     <div id="longitude-title" class="col-12 col-sm-6 col-md-3"><p>Longitude</p></div>
-                    <div id="longitude" class="col-12 col-sm-6 col-md-3">110</div>
+                    <div id="longitude" class="col-12 col-sm-6 col-md-3"></div>
                     <div id="enter-manually-title" class="col-12"><p>Manual Input of Coordinates</p></div>
                     <div id="manual-latitute-label" class="col-12 col-sm-6 col-md-3">
                         <label for="latitude-input" id="label-for-latitude">Latitude</label>
@@ -37,7 +37,7 @@
                     <!-- Weather Data -->
                     
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Wind Speed</p></div>                                       
-                    <div id="value-wind" class="col-12 col-sm-6 col-md-3"><p>wind</p></div>
+                    <div id="value-wind" class="col-12 col-sm-6 col-md-3"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Direction</p></div>
                     <div id="value-wind-direction" class="col-12 col-sm-6 col-md-3"><p>(direction)</div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temperature</p></div>
