Add model to Django Admin, define structure of form and "Thanks!" page

--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -8,6 +8,12 @@
 <div>Thanks!</div>
 <div>Thanks!</div>
 <div>Thanks!</div>
+<div>Thanks 
+    
+    {{ form_data.name }} {{ form_data.surname }} ({{ form_data.email }}) for contacting us.</div>
+    
+<div>This is the text you have just sent (on {{ form_data.date }}, at{{ form_data.time }}):</div>
+<div>{{ form_data.description }}</div>
 <div>Thanks!</div>
 <div>Thanks!</div>
 <div>Thanks!</div>
